--- a/.github/workflows/Build-SukiSU.yml
+++ b/.github/workflows/Build-SukiSU.yml
@@ -348,8 +348,8 @@ jobs:
         if: ${{ github.event.inputs.CPU != 'sm8650' && github.event.inputs.CPU != 'sm7675' }}
         run: |
          cd kernel_workspace
-         #LTO=thin ./kernel_platform/oplus/build/oplus_build_kernel.sh ${{ github.event.inputs.CPUD }} consolidate
-         ./kernel_platform/oplus/build/oplus_build_kernel.sh sun consolidate
+         LTO=thin ./kernel_platform/oplus/build/oplus_build_kernel.sh ${{ github.event.inputs.CPUD }} ${{ github.event.inputs.BUILD_METHOD }}
+         #./kernel_platform/oplus/build/oplus_build_kernel.sh sun co
 
       - name: Make AnyKernel3
         run: |
